# Risc0-Bidding-App

./: README.md  package-lock.json  package.json
core/: Cargo.toml
core/src/: lib.rs
src/: App.tsx
src-risc0/: .gitignore
src-risc0/host/: Cargo.toml
src-risc0/host/src/: lib.rs  main.rs
src-risc0/methods/: Cargo.toml
src-risc0/methods/guest/: Cargo.toml
src-risc0/methods/guest/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: auction-page.tsx
